footer + css (catalog, card)

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,15 @@
 @import 'style/fonts';
 @import 'style/var';
 @import 'style/default';
+@import 'style/header/header';
+@import 'style/header/search';
+@import 'style/catalog/catalog-page';
+@import 'style/catalog/catalog';
+@import 'style/catalog/goods';
+@import 'style/catalog/filter';
+@import 'style/catalog/pagination';
+@import 'style/goods_item';
+@import 'style/card/card-page';
+@import 'style/footer/footer';
+@import 'style/footer/social';
+
