--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -1,5 +1,16 @@
+$color-primary: #272727;
+$color-secondary: #fff;
+$color-main: #04E277;
+$color-main-sub: #0BD072;
+$color-main-dark: #197C00;
+$color-grey-light: #CDCDCD;
+$color-grey: #6F6F6F;
+
+
+
+/*
 $back: rgb(41, 41, 9);
-$text: rgb(212, 166, 166);
+$text: rgb(212, 166, 166);*/
 
 
 
