--- a/src/style/default.scss
+++ b/src/style/default.scss
@@ -13,10 +13,13 @@ body {
   min-width: 320px;
   min-height: 100vh;
   font-family: Montserrat, sans-serif;
+  color: $color-primary;
+  background-color: $color-secondary;
 }
 
 
 img, svg {
+  display: block;
   max-width: 100%;
   max-height: 100%;
   height: auto;
@@ -42,10 +45,15 @@ ul {
 h1,
 h2,
 h3,
+h4,
 p,
-figure,
-fieldset {
+figure {
   margin: 0;
+}
+fieldset{
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
 /*
@@ -67,8 +75,16 @@ fieldset {
 */
 
 .container {
-  max-width: 1240px;
+  max-width: 1880px;
   padding: 0 30px;
   margin: 0 auto;
 }
 
+.main {
+  padding-top: 44px;
+  padding-bottom: 120px;
+}
+
+input[type="search"]::-webkit-search-cancel-button{
+  display: none;
+}
